@@ -28,6 +28,9 @@ import org.apache.shardingsphere.mcp.support.database.capability.SupportedMCPMet
 import org.apache.shardingsphere.mcp.support.database.metadata.model.MCPDatabaseMetadata;
 import org.apache.shardingsphere.mcp.support.database.metadata.model.MCPSchemaMetadata;
 import org.apache.shardingsphere.mcp.support.database.metadata.model.MCPTableMetadata;
+import org.apache.shardingsphere.mcp.support.database.MCPDatabaseHandlerContext;
+import org.apache.shardingsphere.mcp.support.database.spi.MCPFeatureQueryFacade;
+import org.apache.shardingsphere.mcp.support.database.spi.MCPMetadataQueryFacade;
 import org.apache.shardingsphere.mcp.support.descriptor.MCPDescriptorCatalogIndex;
 import org.apache.shardingsphere.mcp.support.protocol.response.MCPItemsResponse;
 import org.junit.jupiter.api.Test;
@@ -41,6 +44,8 @@ import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.isA;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 class SearchMetadataToolHandlerTest {
     
@@ -50,6 +55,9 @@ class SearchMetadataToolHandlerTest {
         assertThat(actual.getName(), is("database_gateway_search_metadata"));
         assertThat(((Map<?, ?>) actual.getInputSchema().get("properties")).size(), is(4));
         Map<?, ?> actualProperties = (Map<?, ?>) actual.getOutputSchema().get("properties");
+        Map<?, ?> actualInputProperties = (Map<?, ?>) actual.getInputSchema().get("properties");
+        Map<?, ?> actualObjectTypeItems = (Map<?, ?>) ((Map<?, ?>) actualInputProperties.get("object_types")).get("items");
+        assertTrue(((List<?>) actualObjectTypeItems.get("enum")).contains("storage_unit"));
         Map<?, ?> actualItems = (Map<?, ?>) ((Map<?, ?>) actualProperties.get("items")).get("items");
         Map<?, ?> actualItemProperties = (Map<?, ?>) actualItems.get("properties");
         assertTrue(actualItemProperties.containsKey("resource"));
@@ -79,7 +87,7 @@ class SearchMetadataToolHandlerTest {
             assertFalse(actualPayload.containsKey("next_page_token"));
             assertFalse((Boolean) actualPayload.get("has_more"));
             assertThat(actualPayload.get("continuation_mode"), is("none"));
-            assertThat(((MetadataSearchHit) ((List<?>) actualPayload.get("items")).get(0)).getName(), is("order_idx"));
+            assertThat(((MetadataSearchHit) ((List<?>) actualPayload.get("items")).getFirst()).getName(), is("order_idx"));
             assertThat(((Map<?, ?>) actualPayload.get("search_context")).get("object_types"), is(List.of("index")));
         }
     }
@@ -92,8 +100,26 @@ class SearchMetadataToolHandlerTest {
             Map<String, Object> actualPayload = actual.toPayload();
             assertThat(actual, isA(MCPItemsResponse.class));
             assertThat(((List<?>) actualPayload.get("items")).size(), is(1));
-            assertThat(((MetadataSearchHit) ((List<?>) actualPayload.get("items")).get(0)).getName(), is("order_seq"));
+            assertThat(((MetadataSearchHit) ((List<?>) actualPayload.get("items")).getFirst()).getName(), is("order_seq"));
         }
+    }
+    
+    @Test
+    void assertHandleSearchMetadataWithStorageUnit() {
+        MCPFeatureQueryFacade queryFacade = mock(MCPFeatureQueryFacade.class);
+        when(queryFacade.query("logic_db", "", "SHOW STORAGE UNITS FROM logic_db")).thenReturn(List.of(Map.of("name", "write_ds")));
+        MCPDatabaseHandlerContext databaseContext = mock(MCPDatabaseHandlerContext.class);
+        when(databaseContext.getMetadataQueryFacade()).thenReturn(mock(MCPMetadataQueryFacade.class));
+        when(databaseContext.getQueryFacade()).thenReturn(queryFacade);
+        MCPResponse actual = new SearchMetadataToolHandler().handle(databaseContext, new MCPToolCall("session-1",
+                Map.of("database", "logic_db", "query", "write", "object_types", List.of("storage_unit"))));
+        Map<String, Object> actualPayload = actual.toPayload();
+        assertThat(actual, isA(MCPItemsResponse.class));
+        MetadataSearchHit actualHit = (MetadataSearchHit) ((List<?>) actualPayload.get("items")).getFirst();
+        assertThat(actualHit.getObjectType(), is("storage_unit"));
+        assertThat(actualHit.getName(), is("write_ds"));
+        assertThat(actualHit.getResource().get("uri"), is("shardingsphere://databases/logic_db/storage-units/write_ds"));
+        assertThat(((Map<?, ?>) actualPayload.get("search_context")).get("object_types"), is(List.of("storage_unit")));
     }
     
     @Test
@@ -103,7 +129,7 @@ class SearchMetadataToolHandlerTest {
                     Map.of("database", "logic_db", "schema", "public", "query", "orders", "object_types", List.of("table", "orders"))));
             Map<String, Object> actualPayload = actual.toPayload();
             assertThat(((List<?>) actualPayload.get("items")).size(), is(1));
-            assertThat(((MetadataSearchHit) ((List<?>) actualPayload.get("items")).get(0)).getName(), is("orders"));
+            assertThat(((MetadataSearchHit) ((List<?>) actualPayload.get("items")).getFirst()).getName(), is("orders"));
             assertThat(((Map<?, ?>) actualPayload.get("search_context")).get("object_types"), is(List.of("table")));
         }
     }
@@ -139,7 +165,7 @@ class SearchMetadataToolHandlerTest {
             Map<?, ?> actualSearchContext = (Map<?, ?>) actualPayload.get("search_context");
             assertThat(actualSearchContext.get("object_types"), is(List.of("database")));
             assertTrue((Boolean) actualSearchContext.get("broad_search_guarded"));
-            Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actualPayload.get("next_actions")).get(0);
+            Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actualPayload.get("next_actions")).getFirst();
             assertThat(actualNextAction.get("type"), is("ask_user"));
             assertThat(actualNextAction.get("required_inputs"), is(List.of("database", "query", "object_types")));
         }
@@ -151,7 +177,7 @@ class SearchMetadataToolHandlerTest {
             MCPResponse actual = new SearchMetadataToolHandler().handle(requestContext, new MCPToolCall("session-1", Map.of("database", "logic_db", "query", "missing")));
             Map<String, Object> actualPayload = actual.toPayload();
             assertThat(((Map<?, ?>) actualPayload.get("empty_state")).get("state"), is("no_match"));
-            Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actualPayload.get("next_actions")).get(0);
+            Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actualPayload.get("next_actions")).getFirst();
             assertThat(actualNextAction.get("type"), is("tool_call"));
             assertThat(actualNextAction.get("tool_name"), is("database_gateway_search_metadata"));
             assertThat(((Map<?, ?>) actualNextAction.get("arguments")).get("query"), is("missing"));
@@ -170,7 +196,7 @@ class SearchMetadataToolHandlerTest {
             assertThat(actualAmbiguityState.get("candidate_count"), is(2));
             assertThat(actualAmbiguityState.get("duplicated_names"), is(List.of("orders")));
             assertThat(actualAmbiguityState.get("narrowing_arguments"), is(List.of("database", "schema", "object_types")));
-            Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actualPayload.get("next_actions")).get(0);
+            Map<?, ?> actualNextAction = (Map<?, ?>) ((List<?>) actualPayload.get("next_actions")).getFirst();
             assertThat(actualNextAction.get("type"), is("ask_user"));
             assertThat(actualNextAction.get("required_inputs"), is(List.of("database", "schema", "object_types")));
             assertThat(actualNextAction.get("order"), is(1));
@@ -213,7 +239,7 @@ class SearchMetadataToolHandlerTest {
             assertThat(actualAmbiguityState.get("duplicated_names"), is(List.of("orders")));
             List<?> actualNextActions = (List<?>) actualPayload.get("next_actions");
             assertThat(actualNextActions.size(), is(1));
-            assertThat(((Map<?, ?>) actualNextActions.get(0)).get("type"), is("ask_user"));
+            assertThat(((Map<?, ?>) actualNextActions.getFirst()).get("type"), is("ask_user"));
         }
     }
     
